--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,73 @@
-.App {
+* {
+  box-sizing: border-box;
+}
+
+table {
+  border: 1px solid black;
+  margin: 10px;
+  border-collapse: collapse;
+}
+
+thead tr {
+  background-color: #443c68;
+  border: 1px solid black;
+  font-size: 1em;
+}
+
+thead th {
+  border: 1px solid white;
+  color: white;
+  padding: 1em;
+}
+
+tbody {
+  background-color: beige;
+}
+
+table td {
+  border: 1px solid black;
+  padding: 1em;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media (max-width: 450px) {
+  /* Further adjustments for mobile screens */
+  table {
+    border: 3px solid black;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  table,
+  thead,
+  tbody,
+  th,
+  td,
+  tr {
+    display: block;
   }
-  to {
-    transform: rotate(360deg);
+
+  thead tr {
+    position: absolute;
+    top: -9999px;
+    left: -9999px;
+  }
+
+  tr {
+    margin-bottom: 15px;
+  }
+
+  td {
+    border: none;
+    position: relative;
+    padding-left: 50%;
+  }
+
+  td:before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 45%;
+    padding-right: 10px;
+    white-space: nowrap;
+    content: attr(data-label);
   }
 }
